--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -8,6 +8,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:drawableStart="@drawable/ic_character"
+        android:textSize="20sp"
+        android:text="@string/character_instructions" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp">
+
+        <RadioButton
+            android:id="@+id/sb_character_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/character_protagonist" />
+
+        <RadioButton
+            android:id="@+id/sb_character_antagonist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="@string/character_antagonist"
+            android:layout_toEndOf="@id/sb_character_main" />
+
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -16,42 +47,22 @@
             android:id="@+id/sb_character_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Name" />
+            android:hint="@string/character_name" />
 
         <EditText
             android:id="@+id/sb_character_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Age"
+            android:hint="@string/character_age"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RadioButton
-            android:id="@+id/sb_character_main"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Main Character" />
-
-        <RadioButton
-            android:id="@+id/sb_character_antagonist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Main Antagonist"
-            android:layout_gravity="end"
-            android:layout_toEndOf="@id/sb_character_main" />
-
-    </RelativeLayout>
-
     <TextView
-            android:id="@+id/character_gender_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gender" />
-
+        android:id="@+id/character_gender_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:text="@string/character_gender" />
 
     <LinearLayout
         android:id="@+id/gender"
@@ -63,47 +74,47 @@
             android:id="@+id/male_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Male" />
+            android:text="@string/character_male" />
 
         <RadioButton
             android:id="@+id/female_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Female" />
+            android:text="@string/character_female" />
 
         <RadioButton
             android:id="@+id/other_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Other" />
+            android:text="@string/character_other" />
     </LinearLayout>
-
 
     <EditText
         android:id="@+id/sb_character_birthplace"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Place of birth" />
+        android:paddingTop="20dp"
+        android:hint="@string/character_birth" />
 
     <EditText
         android:id="@+id/sb_character_personality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sb_character_birthplace"
-        android:hint="Personality" />
+        android:paddingTop="20dp"
+        android:hint="@string/character_personality" />
 
     <EditText
         android:id="@+id/sb_character_notes"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sb_character_personality"
-        android:hint="Notes" />
+        android:paddingTop="20dp"
+        android:hint="@string/character_notes" />
 
     <Button
         android:id="@+id/add_the_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/sb_character_notes"
-        android:text="Add" />
-
+        android:layout_margin="20dp"
+        android:layout_gravity="center"
+        android:text="@string/character_add" />
 </LinearLayout>
