--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -8,34 +8,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:drawableStart="@drawable/ic_place"
+        android:textSize="20sp"
+        android:text="@string/place_instructions"/>
+
     <EditText
         android:id="@+id/sb_place_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Name" />
+        android:layout_marginBottom="20dp"
+        android:hint="@string/place_name" />
 
     <EditText
         android:id="@+id/sb_place_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Location" />
+        android:layout_marginBottom="20dp"
+        android:hint="@string/place_location" />
 
     <EditText
         android:id="@+id/sb_place_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Description" />
+        android:layout_marginBottom="20dp"
+        android:hint="@string/place_desc" />
 
     <EditText
         android:id="@+id/sb_place_notes"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Notes" />
+        android:layout_marginBottom="20dp"
+        android:hint="@string/place_notes" />
 
     <Button
         android:id="@+id/add_the_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add" />
+        android:layout_gravity="center"
+        android:text="@string/place_add" />
 
 </LinearLayout>
