--- a/app/src/main/res/menu/menu_story_builder_main.xml
+++ b/app/src/main/res/menu/menu_story_builder_main.xml
@@ -10,6 +10,6 @@
     <item android:id="@+id/action_search"
         android:title="Search"
         android:orderInCategory="200"
-        android:icon="@drawable/ic_search_black_48dp"
+        android:icon="@drawable/ic_search"
         app:showAsAction="always" />
 </menu>
