--- a/app/src/main/res/drawable/ic_story.xml
+++ b/app/src/main/res/drawable/ic_story.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M21,5c-1.11,-0.35 -2.33,-0.5 -3.5,-0.5 -1.95,0 -4.05,0.4 -5.5,1.5 -1.45,-1.1 -3.55,-1.5 -5.5,-1.5S2.45,4.9 1,6v14.65c0,0.25 0.25,0.5 0.5,0.5 0.1,0 0.15,-0.05 0.25,-0.05C3.1,20.45 5.05,20 6.5,20c1.95,0 4.05,0.4 5.5,1.5 1.35,-0.85 3.8,-1.5 5.5,-1.5 1.65,0 3.35,0.3 4.75,1.05 0.1,0.05 0.15,0.05 0.25,0.05 0.25,0 0.5,-0.25 0.5,-0.5L23,6c-0.6,-0.45 -1.25,-0.75 -2,-1zM21,18.5c-1.1,-0.35 -2.3,-0.5 -3.5,-0.5 -1.7,0 -4.15,0.65 -5.5,1.5L12,8c1.35,-0.85 3.8,-1.5 5.5,-1.5 1.2,0 2.4,0.15 3.5,0.5v11.5z"/>
+<vector android:height="24dp" android:viewportHeight="387.255"
+    android:viewportWidth="387.255" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M8.3,378.9c11.1,11.1 29.2,11.1 40.3,0c5.5,-5.5 8.3,-12.8 8.3,-20c10.2,-5.9 23.2,-13.2 36.9,-20.2c55.6,-28.3 70.4,-25.2 71.9,-24.7c7.1,2.1 14.8,-1.4 17.7,-8.2c8.3,-19.1 47.9,-67.3 78.3,-85.7c1.1,-0.6 2,-1.4 2.9,-2.3c6,1.6 12.7,0.1 17.4,-4.6c6.3,-6.3 6.9,-16.2 1.9,-23.2l99.5,-77.6c2.3,-1.8 3.7,-4.4 3.8,-7.3c0.2,-2.9 -0.9,-5.7 -2.9,-7.7L289.9,2.9c-2,-2 -4.8,-3.1 -7.7,-2.9c-2.9,0.2 -5.5,1.6 -7.3,3.8l-77.6,99.5c-7,-5 -16.9,-4.4 -23.2,1.9c-4.7,4.7 -6.2,11.2 -4.7,17.2c-0.9,0.9 -1.7,1.9 -2.4,3c-19.8,32.7 -67.5,70.5 -85.6,78.4c-6.9,3 -10.4,10.6 -8.2,17.8c0.5,1.5 3.6,16.3 -24.7,71.9c-7,13.7 -14.3,26.8 -20.2,36.9c-7.3,0 -14.5,2.8 -20,8.3C-2.8,349.8 -2.8,367.8 8.3,378.9zM123.1,256.5c-2.3,-5.4 -1.3,-11.9 3.1,-16.3c5.7,-5.7 15.1,-5.7 20.8,-0c5.7,5.7 5.7,15.1 -0,20.8c-4.4,4.4 -10.9,5.4 -16.3,3.1l-79.9,79.9c0,0 -0.9,-1.8 -3.3,-4.3c-2.5,-2.5 -4.3,-3.3 -4.3,-3.3L123.1,256.5z"/>
 </vector>
