--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -46,11 +46,29 @@
         android:layout_marginBottom="20dp"
         android:hint="@string/place_notes" />
 
-    <Button
-        android:id="@+id/add_the_place"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/place_add" />
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/place_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:textColor="@color/colorPopupTextHint"
+            android:padding="10dp"
+            android:text="@string/cancel"/>
+
+        <Button
+            android:id="@+id/add_the_place"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:background="@color/colorPopUp"
+            android:text="@string/place_add" />
+    </LinearLayout>
 
 </LinearLayout>
