--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -110,11 +110,29 @@
         android:paddingTop="20dp"
         android:hint="@string/character_notes" />
 
-    <Button
-        android:id="@+id/add_the_character"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_gravity="center"
-        android:text="@string/character_add" />
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/character_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:textColor="@color/colorPopupTextHint"
+            android:padding="10dp"
+            android:text="@string/cancel"/>
+
+        <Button
+            android:id="@+id/add_the_character"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:background="@color/colorPopUp"
+            android:text="@string/character_add" />
+    </LinearLayout>
+
 </LinearLayout>
