--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -57,9 +57,10 @@
             android:id="@+id/place_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="?android:attr/borderlessButtonStyle"
+            android:padding="10dp"
             android:background="@color/white"
             android:textColor="@color/colorPopupTextHint"
-            android:padding="10dp"
             android:text="@string/cancel"/>
 
         <Button
@@ -67,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            style="?android:attr/borderlessButtonStyle"
             android:background="@color/colorPopUp"
             android:text="@string/place_add" />
     </LinearLayout>
