--- a/app/src/main/res/layout/activity_add_plot.xml
+++ b/app/src/main/res/layout/activity_add_plot.xml
@@ -62,9 +62,10 @@
             android:id="@+id/plot_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:padding="10dp"
+            style="?android:attr/borderlessButtonStyle"
             android:background="@color/white"
             android:textColor="@color/colorPopupTextHint"
-            android:padding="10dp"
             android:text="@string/cancel"/>
 
         <Button
@@ -72,6 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            style="?android:attr/borderlessButtonStyle"
             android:background="@color/colorPopUp"
             android:text="@string/plot_add" />
     </LinearLayout>
