--- a/app/src/main/res/layout/fragment_sbdialog.xml
+++ b/app/src/main/res/layout/fragment_sbdialog.xml
@@ -11,28 +11,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/dialog_instructions"
-        android:drawableStart="@drawable/ic_story"
+        android:drawableStart="@drawable/ic_create_story"
         android:gravity="center"
         android:textColor="@color/colorPopupText"
         android:textSize="25sp" />
 
     <EditText
         android:id="@+id/sb_title"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColorHint="@color/colorPopupTextHint"
         android:drawableStart="@drawable/ic_dialog_title"
         android:drawablePadding="10dp"
         android:hint="@string/dialog_title" />
 
-    <EditText
+    <Spinner
         android:id="@+id/sb_genre"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_dialog_genre"
-        android:drawablePadding="10dp"
         android:textColorHint="@color/colorPopupTextHint"
-        android:hint="@string/dialog_genre" />
+        android:hint="@string/dialog_genre"
+        android:layout_margin="15dp" />
 
     <EditText
         android:id="@+id/sb_notes"
