Re-factor fragment manager and fix up layouts

--- a/app/src/main/res/layout/activity_add_plot.xml
+++ b/app/src/main/res/layout/activity_add_plot.xml
@@ -52,11 +52,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:layout_below="@id/sb_plotline_notes"
-        android:gravity="end">
+        android:gravity="end|bottom">
 
         <Button
             android:id="@+id/plot_cancel"
