--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/add_character"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -9,19 +9,21 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/add_character_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:drawableStart="@drawable/ic_character"
         android:textSize="20sp"
         android:text="@string/character_instructions" />
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/add_character_position"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="10dp">
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:layout_below="@id/add_character_instructions">
 
         <RadioButton
             android:id="@+id/sb_character_main"
@@ -40,8 +42,10 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/add_character_details"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/add_character_position">
 
         <EditText
             android:id="@+id/sb_character_name"
@@ -62,13 +66,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:text="@string/character_gender" />
+        android:text="@string/character_gender"
+        android:layout_below="@id/add_character_details" />
 
     <LinearLayout
         android:id="@+id/gender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_below="@id/character_gender_textview">
 
         <RadioButton
             android:id="@+id/male_gender"
@@ -94,28 +100,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:hint="@string/character_birth" />
+        android:hint="@string/character_birth"
+        android:layout_below="@id/gender"/>
 
     <EditText
         android:id="@+id/sb_character_personality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:hint="@string/character_personality" />
+        android:hint="@string/character_personality"
+        android:layout_below="@id/sb_character_birthplace"/>
 
     <EditText
         android:id="@+id/sb_character_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dp"
-        android:hint="@string/character_notes" />
+        android:hint="@string/character_notes"
+        android:layout_below="@id/sb_character_personality"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        android:gravity="end">
+        android:gravity="end|bottom"
+        android:layout_below="@id/sb_character_notes">
 
         <Button
             android:id="@+id/character_cancel"
@@ -137,4 +147,4 @@
             android:text="@string/character_add" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
