--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/add_place"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
@@ -9,10 +9,10 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/add_place_instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
         android:paddingBottom="20dp"
         android:drawableStart="@drawable/ic_place"
         android:textSize="20sp"
@@ -23,35 +23,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:hint="@string/place_name" />
+        android:hint="@string/place_name"
+        android:layout_below="@+id/add_place_instructions"/>
 
     <EditText
         android:id="@+id/sb_place_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:hint="@string/place_location" />
+        android:hint="@string/place_location"
+        android:layout_below="@+id/sb_place_name"/>
 
     <EditText
         android:id="@+id/sb_place_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:hint="@string/place_desc" />
+        android:hint="@string/place_desc"
+        android:layout_below="@+id/sb_place_location"/>
 
     <EditText
         android:id="@+id/sb_place_notes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:hint="@string/place_notes" />
+        android:hint="@string/place_notes"
+        android:layout_below="@+id/sb_place_desc"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
-        android:gravity="end">
+        android:gravity="end|bottom"
+        android:layout_below="@id/sb_place_notes">
 
         <Button
             android:id="@+id/place_cancel"
@@ -73,4 +78,4 @@
             android:text="@string/place_add" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
