--- a/app/src/main/res/layout/activity_add_plot.xml
+++ b/app/src/main/res/layout/activity_add_plot.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="@string/plot_main"
+        android:onClick="mPlotline"
         android:layout_below="@+id/plot_instructions"/>
 
     <EditText
