--- a/app/src/main/res/values/genres.xml
+++ b/app/src/main/res/values/genres.xml
@@ -8,6 +8,7 @@
         <item>Fantasy</item>
         <item>General</item>
         <item>Historical</item>
+        <item>Horror</item>
         <item>Kids</item>
         <item>Mystery</item>
         <item>Poetry</item>
