--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -13,6 +13,10 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
+    <!-- For FAB menu -->
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="half_black">#808080</color>
+
     <!-- For icons -->
     <color name="icons_green">#4CAF50</color>
 </resources>
