--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,10 @@
     <style name="ListViewTheme" parent="Base.TextAppearance.AppCompat.Display1">
         <item name="android:text">#000000</item>
     </style>
+
+    <!-- For the FAB menu -->
+    <style name="menu_labels_style">
+        <item name="android:background">@drawable/fab_labels</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
