--- a/app/src/main/res/layout/tab_view.xml
+++ b/app/src/main/res/layout/tab_view.xml
@@ -28,7 +28,7 @@
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:background="@color/black" />
+        android:background="@color/ColorPrimaryDark" />
 
 
     <TextView
